# adaptive-belief-ecology-system

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
backend/: cli.py
backend/agents/: __init__.py  belief_creator.py  consolidation.py  contradiction_auditor.py  decay_controller.py  perception.py  reinforcement.py  scheduler.py
backend/api/: app.py  schemas.py
backend/chat/: service.py
backend/core/: __init__.py  config.py
backend/llm/: anthropic_provider.py  openai_provider.py  provider.py
backend/storage/: in_memory.py  sqlite.py
docs/: EVALUATIONS.md  agents.md  architecture.md  side_by_side_eval.md
examples/: demo_conversation.json  seed_beliefs.json
frontend/: .dockerignore
frontend/app/: page.tsx
frontend/components/: ChatInterface.tsx  Sidebar.tsx
frontend/lib/: api.ts
results/: cognitive_battery_50_results.json  cognitive_test_results.json  side_by_side_eval.json  stress_test_200_results.json
results/cognitive_eval/: baseline_1000.json  baseline_1000.md
scripts/: run_side_by_side_eval.py
tests/: test_cli.py
tests/agents/: test_consolidation.py  test_contradiction_auditor.py  test_decay_controller.py  test_decay_salience.py  test_llm_mutation.py  test_perception.py  test_reinforcement.py  test_reinforcement_ecology.py  test_scheduler_consolidation.py  test_tension_formula.py
tests/api/: test_routes.py
tests/cognitive/: test_200_stress.py  test_chat_cognitive.py  test_cognitive_battery.py  test_prompt_bank.py
(+20 files in other folders)
