[project]
name = "abes"
version = "0.1.0"
description = "Adaptive Belief Ecology System"
requires-python = ">=3.10"
license = "AGPL-3.0"
authors = [
    {name = "Bradley R. Kinnard", email = "brad@aftermathtech.com"},
]
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.9,<2.10",
    "pydantic-settings>=2.4,<2.5",
    "msgpack>=1.0",
    "sentence-transformers>=5.0",
    "spacy>=3.8",
    "transformers>=4.40",
    "click>=8.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

[project.scripts]
abes = "backend.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]
serve = [
    "uvicorn>=0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["backend*", "baselines*", "beliefs*", "interfaces*", "metrics*", "experiments*"]
